got the counter kinda working

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </p>
 
        <div id="image-container">
-           <img id="left" src="" alt ="title" title ="">
-           <img id="center" src="" alt ="title" title ="">
-           <img id="right" src="" alt ="title" title ="">
+           <img id="left" src="" alt ="" title ="">
+           <img id="center" src="" alt ="" title ="">
+           <img id="right" src="" alt ="" title ="">
 
        </div>
 
